version/0.28/_sources/api/solver/_autosummary/settings/species_mass_fractions.rst.txt
:orphan:

.. _species_mass_fractions:

species_mass_fractions
======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.species_mass_fractions
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`species_mass_fractions_child <species_mass_fractions_child>`


.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

====================================================   =====================================================================

